# diesel_ltree

./: .env.sample  .travis.yml  Cargo.toml  README.md  build.rs  diesel.toml
.github/workflows/: rust.yml
migrations/2017-10-19-074405_basic_tree/: down.sql  up.sql
src/: lib.rs  tests.rs
src/tests/: schema.patch  schema.rs
