[package]
name = "diesel_ltree"
version = "0.3.0"
# Currently maintained by Conner Bradley, originally written by Ashe Connor
authors = ["Conner Bradley <bradley@advtech.ca>", "Ashe Connor <ashe@kivikakk.ee>"]
description = "Adds support for the PostgreSQL ltree extension to Diesel"
edition = "2021"
license = "MIT"
categories = ["database"]
readme = "README.md"
repository = "https://github.com/kivikakk/diesel_ltree"

[dependencies]
byteorder = "1.0"
diesel = { version = "2.0", default-features = false, features = [
    "postgres_backend",
] }

[dev-dependencies]
dotenv = "0.15"
diesel = { version = "2.0", default-features = false, features = ["postgres"] }
diesel_migrations = "2.0"
